2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-decode-parameter-value)
	(mime-decode-parameters): Use string-to-number instead of
	string-to-int.

2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el (eword-encode-char-type): Defined as macro.

2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* lunit.el (lunit-generate-template): Use `with-current-buffer'
	rather than save-excursion+set-buffer.

	* mmbuffer.el (initialize-instance, mime-write-entity)
	(mime-entity-body, mime-write-entity-body, mime-entity-content)
	(mime-write-entity-content, mime-entity-fetch-field): Likewise.

	* mmcooked.el (write-entity-content, write-entity)
	(write-entity-body): Likewise.

	* mmgeneric.el (mime-insert-header-from-buffer): Likewise.

	* qmtp.el (qmtp-send-buffer): Likewise.

	* smtp.el (smtp-package-buffer-internal-size, smtp-send-buffer)
	(smtp-send-buffer-by-myself, smtp-primitive-data)
	(smtp-process-filter, smtp-send-command)
	(smtp-deduce-address-list): Likewise.

2014-06-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Un-encoded garbage handling is available when built-in base64
	decoder is used.

	* mel.el (mel-b-builtin-garbage-strategy): New customizable
	variable.
	(mel-b-builtin-encoded-line-regexp): New variable.
	(mel-b-builtin-decode-string, mel-b-builtin-decode-region): New
	functions.
	(mime-decode-string, mime-decode-region)
	(mime-write-decoded-region): (mel-b-builtin) Use them.

2014-05-31  Juliusz Chroboczek  <jch@pps.univ-paris-diderot.fr>

	* mel.el (mime-insert-encoded-file): Avoid going through an
	intermediary string, work inline.
	(mime-write-decoded-region): likewise.

2014-04-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* FLIM-ELS: Check whether secure-hash function is defined.
	Cf. https://github.com/ikazuhiro/flim/commit/85bbe382c4812fd041207aa727acba8ece2e7a39#commitcomment-6082738

	* hmac-md5.el: Likewise.

	* hmac-sha1.el: Likewise.

	* sha1.el (TOP, sha1-dl-module): Likewise.
